Removes testing html elements

--- a/index.html
+++ b/index.html
@@ -14,14 +14,9 @@
     <body>
         <div class="container mainContent">
             <h1>Video Game Trivia</h1>
-            <h2 id="clock">Time Remaining: <span id="seconds">25</span> seconds</h2>
-            <h3>Who is the main protagonist in <em>The Legend of Zelda</em>?</h3>
-            <form>
-                <input type="radio" name="option" class="choice" value="A"> Ganon
-                <input type="radio" name="option" class="choice" value="B"> Link
-                <input type="radio" name="option" class="choice" value="C"> Zelda
-                <input type="radio" name="option" class="choice" value="D"> Sara
-            </form>
+            <h2 id="clock">Time Remaining: <span id="timer">5</span> seconds</h2>
+            <!--Div to contain game questions-->
+            <div class="triviaArea"></div>
         </div>
     </body>
 
