--- a/index.html
+++ b/index.html
@@ -1,22 +1,30 @@
 <!DOCTYPE html>
 <html lang="en-us">
     <head>
-        <!--Bootstrap CSS-->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"/>
+        <!--Reset CSS-->
+        <link rel="stylesheet" type="text/css" href="assets/css/reset.css"/>
 
         <!--Custom Google Font-->
         <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
 
         <!--Custom CSS-->
         <link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
-        <title>Trivia Game</title>
+        <title>Gamer Trivia</title>
     </head>
     <body>
-        <div class="container mainContent">
-            <h1>Video Game Trivia</h1>
-            <h2 id="clock">Time Remaining: <span id="timer">5</span> seconds</h2>
+        <div class = imgContainer>
+            <img id="bannerImg"src="assets/images/banner.jpg"/>
+        </div>
+        <div class="buttonDiv">
+            <button id="startBtn">Start</button>
+        </div>
+        <div class="mainContent">
+            <h1 id="clock">Time Remaining: <span id="timer">5</span> seconds</h1>
             <!--Div to contain game questions-->
             <div class="triviaArea"></div>
+        </div>
+        <div class="buttonDiv">
+            <button id="restartBtn">Restart</button>
         </div>
     </body>
 
