Cleans up unnecessary code from js files.

--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en-us">
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <!--Reset CSS-->
-        <link rel="stylesheet" type="text/css" href="assets/css/reset.css"/>
+        <link rel="stylesheet" type="text/css" href="./assets/css/reset.css"/>
 
         <!--Custom Google Font-->
         <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
 
         <!--Custom CSS-->
-        <link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
+        <link rel="stylesheet" type="text/css" href="./assets/css/style.css"/>
+
         <title>Gamer Trivia</title>
     </head>
     <body>
